plsql2java-translation/target/generated-sources/antlr4/com/plsql2java/translation/PlSqlParser.java
// Generated from com/plsql2java/translation/PlSqlParser.g4 by ANTLR 4.13.1
package com.plsql2java.translation;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PlSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSIF=2, ELSE=3, END=4, THEN=5, CASE=6, WHEN=7, LOOP=8, WHILE=9, 
		FOR=10, IN=11, EXIT=12, EXCEPTION=13, RAISE=14, GOTO=15, CURSOR=16, OPEN=17, 
		FETCH=18, CLOSE=19, INTO=20, BULK=21, COLLECT=22, FORALL=23, DECLARE=24, 
		BEGIN=25, PROCEDURE=26, FUNCTION=27, PACKAGE=28, RETURN=29, IS=30, AS=31, 
		NULL_=32, TRUE_=33, FALSE_=34, AND=35, OR=36, NOT=37, OTHERS=38, LIMIT=39, 
		SAVE=40, EXCEPTIONS=41, SELECT=42, INSERT=43, UPDATE=44, DELETE=45, TYPE=46, 
		ROWTYPE=47, BODY=48, DEFAULT=49, OUT=50, VALUES=51, FROM=52, WHERE=53, 
		SET=54, DBMS_OUTPUT=55, PUT_LINE=56, VARCHAR2=57, NUMBER_KW=58, DATE_KW=59, 
		BOOLEAN_KW=60, INTEGER_KW=61, ID=62, NUMBER_LIT=63, STRING_LIT=64, DOT=65, 
		COMMA=66, SEMI=67, COLON=68, ASSIGN=69, LPAREN=70, RPAREN=71, EQ=72, NEQ=73, 
		LT=74, GT=75, LE=76, GE=77, PLUS=78, MINUS=79, STAR=80, SLASH=81, PERCENT=82, 
		AT=83, DOTDOT=84, WS=85, LINE_COMMENT=86, BLOCK_COMMENT=87;
	public static final int
		RULE_compilationUnit = 0, RULE_packageSpec = 1, RULE_packageBody = 2, 
		RULE_procedureDecl = 3, RULE_functionDecl = 4, RULE_paramList = 5, RULE_param = 6, 
		RULE_declareSection = 7, RULE_variableDecl = 8, RULE_cursorDecl = 9, RULE_dataType = 10, 
		RULE_block = 11, RULE_exceptionBlock = 12, RULE_exceptionHandler = 13, 
		RULE_exceptionName = 14, RULE_packageSpecItem = 15, RULE_procedureSpec = 16, 
		RULE_functionSpec = 17, RULE_statement = 18, RULE_ifStatement = 19, RULE_caseStatement = 20, 
		RULE_loopStatement = 21, RULE_whileStatement = 22, RULE_forStatement = 23, 
		RULE_cursorForStatement = 24, RULE_openStatement = 25, RULE_fetchStatement = 26, 
		RULE_closeStatement = 27, RULE_bulkCollectStatement = 28, RULE_forallStatement = 29, 
		RULE_dmlStatement = 30, RULE_insertStmt = 31, RULE_updateStmt = 32, RULE_deleteStmt = 33, 
		RULE_raiseStatement = 34, RULE_gotoStatement = 35, RULE_dbmsOutputStatement = 36, 
		RULE_assignStatement = 37, RULE_returnStatement = 38, RULE_callStatement = 39, 
		RULE_nullStatement = 40, RULE_selectStmt = 41, RULE_condition = 42, RULE_expr = 43, 
		RULE_exprList = 44, RULE_idList = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "packageSpec", "packageBody", "procedureDecl", "functionDecl", 
			"paramList", "param", "declareSection", "variableDecl", "cursorDecl", 
			"dataType", "block", "exceptionBlock", "exceptionHandler", "exceptionName", 
			"packageSpecItem", "procedureSpec", "functionSpec", "statement", "ifStatement", 
			"caseStatement", "loopStatement", "whileStatement", "forStatement", "cursorForStatement", 
			"openStatement", "fetchStatement", "closeStatement", "bulkCollectStatement", 
			"forallStatement", "dmlStatement", "insertStmt", "updateStmt", "deleteStmt", 
			"raiseStatement", "gotoStatement", "dbmsOutputStatement", "assignStatement", 
			"returnStatement", "callStatement", "nullStatement", "selectStmt", "condition", 
			"expr", "exprList", "idList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'.'", "','", "';'", "':'", "':='", "'('", 
			"')'", "'='", null, "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'@'", "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSIF", "ELSE", "END", "THEN", "CASE", "WHEN", "LOOP", "WHILE", 
			"FOR", "IN", "EXIT", "EXCEPTION", "RAISE", "GOTO", "CURSOR", "OPEN", 
			"FETCH", "CLOSE", "INTO", "BULK", "COLLECT", "FORALL", "DECLARE", "BEGIN", 
			"PROCEDURE", "FUNCTION", "PACKAGE", "RETURN", "IS", "AS", "NULL_", "TRUE_", 
			"FALSE_", "AND", "OR", "NOT", "OTHERS", "LIMIT", "SAVE", "EXCEPTIONS", 
			"SELECT", "INSERT", "UPDATE", "DELETE", "TYPE", "ROWTYPE", "BODY", "DEFAULT", 
			"OUT", "VALUES", "FROM", "WHERE", "SET", "DBMS_OUTPUT", "PUT_LINE", "VARCHAR2", 
			"NUMBER_KW", "DATE_KW", "BOOLEAN_KW", "INTEGER_KW", "ID", "NUMBER_LIT", 
			"STRING_LIT", "DOT", "COMMA", "SEMI", "COLON", "ASSIGN", "LPAREN", "RPAREN", 
			"EQ", "NEQ", "LT", "GT", "LE", "GE", "PLUS", "MINUS", "STAR", "SLASH", 
			"PERCENT", "AT", "DOTDOT", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlSqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PlSqlParser.EOF, 0); }
		public List<PackageSpecContext> packageSpec() {
			return getRuleContexts(PackageSpecContext.class);
		}
		public PackageSpecContext packageSpec(int i) {
			return getRuleContext(PackageSpecContext.class,i);
		}
		public List<PackageBodyContext> packageBody() {
			return getRuleContexts(PackageBodyContext.class);
		}
		public PackageBodyContext packageBody(int i) {
			return getRuleContext(PackageBodyContext.class,i);
		}
		public List<ProcedureDeclContext> procedureDecl() {
			return getRuleContexts(ProcedureDeclContext.class);
		}
		public ProcedureDeclContext procedureDecl(int i) {
			return getRuleContext(ProcedureDeclContext.class,i);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 469762048L) != 0)) {
				{
				setState(96);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(92);
					packageSpec();
					}
					break;
				case 2:
					{
					setState(93);
					packageBody();
					}
					break;
				case 3:
					{
					setState(94);
					procedureDecl();
					}
					break;
				case 4:
					{
					setState(95);
					functionDecl();
					}
					break;
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageSpecContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(PlSqlParser.PACKAGE, 0); }
		public List<TerminalNode> ID() { return getTokens(PlSqlParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PlSqlParser.ID, i);
		}
		public TerminalNode IS() { return getToken(PlSqlParser.IS, 0); }
		public TerminalNode END() { return getToken(PlSqlParser.END, 0); }
		public TerminalNode SEMI() { return getToken(PlSqlParser.SEMI, 0); }
		public List<PackageSpecItemContext> packageSpecItem() {
			return getRuleContexts(PackageSpecItemContext.class);
		}
		public PackageSpecItemContext packageSpecItem(int i) {
			return getRuleContext(PackageSpecItemContext.class,i);
		}
		public PackageSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterPackageSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitPackageSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitPackageSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageSpecContext packageSpec() throws RecognitionException {
		PackageSpecContext _localctx = new PackageSpecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(PACKAGE);
			setState(104);
			match(ID);
			setState(105);
			match(IS);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4611686018628714496L) != 0)) {
				{
				{
				setState(106);
				packageSpecItem();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(END);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(113);
				match(ID);
				}
			}

			setState(116);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageBodyContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(PlSqlParser.PACKAGE, 0); }
		public TerminalNode BODY() { return getToken(PlSqlParser.BODY, 0); }
		public List<TerminalNode> ID() { return getTokens(PlSqlParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PlSqlParser.ID, i);
		}
		public TerminalNode IS() { return getToken(PlSqlParser.IS, 0); }
		public TerminalNode END() { return getToken(PlSqlParser.END, 0); }
		public TerminalNode SEMI() { return getToken(PlSqlParser.SEMI, 0); }
		public List<ProcedureDeclContext> procedureDecl() {
			return getRuleContexts(ProcedureDeclContext.class);
		}
		public ProcedureDeclContext procedureDecl(int i) {
			return getRuleContext(ProcedureDeclContext.class,i);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public List<VariableDeclContext> variableDecl() {
			return getRuleContexts(VariableDeclContext.class);
		}
		public VariableDeclContext variableDecl(int i) {
			return getRuleContext(VariableDeclContext.class,i);
		}
		public PackageBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterPackageBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitPackageBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitPackageBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageBodyContext packageBody() throws RecognitionException {
		PackageBodyContext _localctx = new PackageBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packageBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(PACKAGE);
			setState(119);
			match(BODY);
			setState(120);
			match(ID);
			setState(121);
			match(IS);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4611686018628714496L) != 0)) {
				{
				setState(125);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PROCEDURE:
					{
					setState(122);
					procedureDecl();
					}
					break;
				case FUNCTION:
					{
					setState(123);
					functionDecl();
					}
					break;
				case ID:
					{
					setState(124);
					variableDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(END);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(131);
				match(ID);
				}
			}

			setState(134);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureDeclContext extends ParserRuleContext {
		public TerminalNode PROCEDURE() { return getToken(PlSqlParser.PROCEDURE, 0); }
		public TerminalNode ID() { return getToken(PlSqlParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(PlSqlParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PlSqlParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode IS() { return getToken(PlSqlParser.IS, 0); }
		public TerminalNode AS() { return getToken(PlSqlParser.AS, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public DeclareSectionContext declareSection() {
			return getRuleContext(DeclareSectionContext.class,0);
		}
		public ProcedureDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterProcedureDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitProcedureDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitProcedureDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureDeclContext procedureDecl() throws RecognitionException {
		ProcedureDeclContext _localctx = new ProcedureDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procedureDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(PROCEDURE);
			setState(137);
			match(ID);
			setState(138);
			match(LPAREN);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(139);
				paramList();
				}
			}

			setState(142);
			match(RPAREN);
			setState(143);
			_la = _input.LA(1);
			if ( !(_la==IS || _la==AS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(144);
				declareSection();
				}
				break;
			}
			setState(147);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(PlSqlParser.FUNCTION, 0); }
		public TerminalNode ID() { return getToken(PlSqlParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(PlSqlParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PlSqlParser.RPAREN, 0); }
		public TerminalNode RETURN() { return getToken(PlSqlParser.RETURN, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode IS() { return getToken(PlSqlParser.IS, 0); }
		public TerminalNode AS() { return getToken(PlSqlParser.AS, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public DeclareSectionContext declareSection() {
			return getRuleContext(DeclareSectionContext.class,0);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterFunctionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitFunctionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(FUNCTION);
			setState(150);
			match(ID);
			setState(151);
			match(LPAREN);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(152);
				paramList();
				}
			}

			setState(155);
			match(RPAREN);
			setState(156);
			match(RETURN);
			setState(157);
			dataType();
			setState(158);
			_la = _input.LA(1);
			if ( !(_la==IS || _la==AS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(159);
				declareSection();
				}
				break;
			}
			setState(162);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamListContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PlSqlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PlSqlParser.COMMA, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitParamList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			param();
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(165);
				match(COMMA);
				setState(166);
				param();
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PlSqlParser.ID, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode IN() { return getToken(PlSqlParser.IN, 0); }
		public TerminalNode OUT() { return getToken(PlSqlParser.OUT, 0); }
		public TerminalNode ASSIGN() { return getToken(PlSqlParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(ID);
			setState(177);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(173);
				match(IN);
				}
				break;
			case 2:
				{
				setState(174);
				match(OUT);
				}
				break;
			case 3:
				{
				setState(175);
				match(IN);
				setState(176);
				match(OUT);
				}
				break;
			}
			setState(179);
			dataType();
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(180);
				match(ASSIGN);
				setState(181);
				expr(0);
				}
			}
